--- a/.github/workflows/ami-test-apply.yml
+++ b/.github/workflows/ami-test-apply.yml
@@ -97,7 +97,7 @@ jobs:
         with:
           name: deploy-success
           path: ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}-success.txt
-     
+
       - name: Deactivate AWS Credentials
         if: ${{ always() }}
         uses: docker://amazon/aws-cli
@@ -107,3 +107,28 @@ jobs:
           AWS_REGION: eu-west-2
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
+
+  get-publish-version:
+    runs-on: ubuntu-latest
+    outputs:
+      publish-version: ${{ steps.get-publish-version.outputs.publish-version }}
+    steps:
+      - name: Get publish version
+        id: get-publish-version
+        run: |
+          LATEST_VERSION=$(curl --silent "https://api.github.com/repos/${{ github.repository }}/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+          [  -z "$LATEST_VERSION" ] && LATEST_VERSION="0.0.0"
+          VERSION=$(echo $LATEST_VERSION | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
+          echo "::set-output name=publish-version::${VERSION}"
+
+  publish-github-release:
+    runs-on: ubuntu-latest
+    needs: [get-publish-version]
+    - uses: "marvinpinto/action-automatic-releases@latest"
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: ${{ needs.get-publish-version.outputs.publish-version }}
+        prerelease: false
+        title: "AMI test result ${{ needs.get-publish-version.outputs.publish-version }}"
+        files: ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}-success.txt
+     
