--- a/.github/workflows/ami-test-apply.yml
+++ b/.github/workflows/ami-test-apply.yml
@@ -124,11 +124,12 @@ jobs:
   publish-github-release:
     runs-on: ubuntu-latest
     needs: [get-publish-version]
-    - uses: "marvinpinto/action-automatic-releases@latest"
-      with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: ${{ needs.get-publish-version.outputs.publish-version }}
-        prerelease: false
-        title: "AMI test result ${{ needs.get-publish-version.outputs.publish-version }}"
-        files: ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}-success.txt
-     
+    steps:
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: ${{ needs.get-publish-version.outputs.publish-version }}
+          prerelease: false
+          title: "AMI test result ${{ needs.get-publish-version.outputs.publish-version }}"
+          files: ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}-success.txt
+      
