--- a/.github/workflows/ami-test-apply.yml
+++ b/.github/workflows/ami-test-apply.yml
@@ -113,13 +113,29 @@ jobs:
     outputs:
       publish-version: ${{ steps.get-publish-version.outputs.publish-version }}
     steps:
-      - name: Get publish version
-        id: get-publish-version
+      - name: Prepare SemVer
+        id: prepare-semver
         run: |
           LATEST_VERSION=$(curl --silent "https://api.github.com/repos/${{ github.repository }}/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
           [  -z "$LATEST_VERSION" ] && LATEST_VERSION="0.0.0"
-          VERSION=$(echo $LATEST_VERSION | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
-          echo "::set-output name=publish-version::${VERSION}"
+          echo ::set-output name=latest_version_out::$LATEST_VERSION
+          commit_message="${{ github.event.head_commit.message }}"
+          if [[ "${commit_message,,}" == *"major release"* ]]; then
+            echo ::set-output name=semver_increment::"m"
+          elif [[ "${commit_message,,}" == *"minor release"* ]]; then
+            echo ::set-output name=semver_increment::"i"
+          else
+            echo ::set-output name=semver_increment::"p"
+          fi
+      - name: Increment SemVer
+        id: semver
+        uses: matt-FFFFFF/simple-semver@v0.1.0
+        with:
+          semver-input: ${{ steps.prepare-semver.outputs.latest_version_out }}
+          increment: ${{ steps.prepare-semver.outputs.semver_increment }}
+      - name: Get publish version
+        id: get-publish-version
+        run: echo "::set-output name=publish-version::${{ steps.semver.outputs.semver }}"
 
   publish-github-release:
     runs-on: ubuntu-latest
