--- a/.github/workflows/ami-test-apply.yml
+++ b/.github/workflows/ami-test-apply.yml
@@ -116,18 +116,11 @@ jobs:
       - name: Prepare SemVer
         id: prepare-semver
         run: |
-          set -x
           LATEST_VERSION=$(curl --silent "https://api.github.com/repos/${{ github.repository }}/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+          echo $LATEST_VERSION
           [  -z "$LATEST_VERSION" ] && LATEST_VERSION="0.0.0"
           echo ::set-output name=latest_version_out::$LATEST_VERSION
-          commit_message="${{ github.event.head_commit.message }}"
-          if [[ "${commit_message,,}" == *"major release"* ]]; then
-            echo ::set-output name=semver_increment::"m"
-          elif [[ "${commit_message,,}" == *"minor release"* ]]; then
-            echo ::set-output name=semver_increment::"i"
-          else
-            echo ::set-output name=semver_increment::"p"
-          fi
+          echo ::set-output name=semver_increment::"p"
       - name: Increment SemVer
         id: semver
         uses: matt-FFFFFF/simple-semver@v0.1.0
