--- a/.github/workflows/ami-test-apply.yml
+++ b/.github/workflows/ami-test-apply.yml
@@ -138,6 +138,7 @@ jobs:
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
           prerelease: false
           title: "AMI test result ${{ needs.get-publish-version.outputs.publish-version }}"
           files: ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}-success.txt
