--- a/.github/workflows/ami-test-apply.yml
+++ b/.github/workflows/ami-test-apply.yml
@@ -143,7 +143,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ needs.get-publish-version.outputs.publish-version }}
-          release_name: Release ${{ needs.get-publish-version.outputs.publish-version }}
+          tag_name: ${{ steps.get-publish-version.outputs.publish-version }}
+          release_name: Release ${{ steps.get-publish-version.outputs.publish-version }}
           draft: false
           prerelease: false
