--- a/.github/workflows/ami-test-apply.yml
+++ b/.github/workflows/ami-test-apply.yml
@@ -75,6 +75,26 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
       
+      - name: "Cycle nodes"
+        if: success()
+        uses: actions/checkout@v2
+        id: cycle nodes
+        uses: unfor19/install-aws-cli-action@v1
+        with:
+          version: 2
+        run: |
+          for INSTANCE_ID in $(aws ec2 describe-instances --filters Name=tag:Name,Values=ci-concourse-* | jq -r '.Reservations[].Instances[].InstanceId');
+          do
+            #aws autoscaling set-instance-health --instance-id $INSTANCE_ID --health-status Unhealthy
+            echo $INSTANCE_ID
+          done
+        shell: bash
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
+          AWS_SECRETS_ROLE: ${{ secrets.AWS_GHA_ROLE_MGMT_DEV }}
+          AWS_DEFAULT_REGION: eu-west-2
+      
       - name: Deactivate AWS Credentials
         if: failure()
         uses: docker://amazon/aws-cli
