use new Release resource to trigger ami-test (#299)
* use new Release resource to trigger ami-test

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Fail action if there is nothing to apply

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* harsher cycle, compare running ami vs new ami to validate

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Only try against running instances

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/ami-test/jobs/ami-test.yml
+++ b/ci/ami-test/jobs/ami-test.yml
@@ -1,32 +1,29 @@
 jobs:
   - name: ami-test
     plan:
-    - get: meta
-      resource: meta-dev
-    - get: untested-al2-concourse-ami
-      trigger: true
-    - config:
-        image_resource:
-          source:
-            repository: busybox
-          type: registry-image
-        platform: linux
-        run:
-          args:
-          - hello world
-          path: echo
-      task: simple-task
-    on_failure:
-      do:
-        - .: (( inject meta.plan.ami-test-results ))
-          task: ami-test-result-fail
-          config:
-            params:
-              RESULT: FAILED
-    on_success:
-      do:
-        - .: (( inject meta.plan.ami-test-results ))
-          task: ami-test-result-success
-          config:
-              params:
-                RESULT: SUCCESS
+      - get: meta
+        resource: meta-dev
+      - get: ami-test-release
+        trigger: true
+      - get: untested-al2-concourse-ami
+        trigger: false
+      - .: (( inject meta.plan.ami-id-compare ))
+        config:
+          params:
+            AWS_ROLE_ARN: arn:aws:iam::((aws_account.management-dev)):role/ci
+          inputs:
+            - name: untested-al2-concourse-ami
+        on_failure:
+          do:
+            - .: (( inject meta.plan.ami-test-results ))
+              task: ami-test-result-fail
+              config:
+                params:
+                  RESULT: FAILED
+        on_success:
+          do:
+            - .: (( inject meta.plan.ami-test-results ))
+              task: ami-test-result-success
+              config:
+                  params:
+                    RESULT: SUCCESS
