Missed creating exit_status
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/.github/workflows/ami-test-apply.yml
+++ b/.github/workflows/ami-test-apply.yml
@@ -58,7 +58,7 @@ jobs:
         id: apply
         run: |
           exit_status=0
-          terraform plan -detailed-exitcode -out terraform.plan >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
+          terraform plan -detailed-exitcode -out terraform.plan || exit_status=$? >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
           if [ $exit_status -eq 0 ]; then
               echo "No changes, not applying"
               exit 1
