update secrets and github-release resource

--- a/ci/ami-test/resources.yml
+++ b/ci/ami-test/resources.yml
@@ -4,10 +4,10 @@ resources:
     type: ami
     check_every: 5m
     source:
-      aws_role_arn: arn:aws:iam::((dataworks.aws_management_acc)):role/ci
+      aws_role_arn: arn:aws:iam::((aws_account.management)):role/ci
       region: ((dataworks.aws_region))
       filters:
-        owner-id: ((dataworks.aws_management_acc))
+        owner-id: ((aws_account.management))
         is-public: false
         state: available
         name: untested-dw-al2-concourse-ami-*
@@ -21,5 +21,6 @@ resources:
     source:
       owner: dwp
       repository: aws-concourse
+      access_token: ((dataworks-secrets.concourse_github_pat))
     check_every: 5m
     webhook_token: ((dataworks.concourse_github_webhook_token))
