testing ami workflow without if statement

--- a/.github/workflows/ami-test-apply.yml
+++ b/.github/workflows/ami-test-apply.yml
@@ -57,18 +57,8 @@ jobs:
       - name: "Terraform Apply"
         id: apply
         run: |
-          exit_status=0
-          terraform plan -detailed-exitcode -out terraform.plan || exit_status=$? >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
-          if [ $exit_status -eq 0 ]; then
-              echo "No changes, not applying"
-              exit 1
-          elif [ $exit_status -eq 1 ]; then
-              echo "Terraform plan failed"
-              exit 1
-          elif [ $exit_status -eq 2 ]; then
-              terraform apply -auto-approve terraform.plan >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
-              touch ../terraform-success/success
-          fi
+          terraform plan -detailed-exitcode -out terraform.plan >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
+          terraform apply -auto-approve terraform.plan >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
         continue-on-error: false
         env:
           TF_WORKSPACE: default
@@ -77,7 +67,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
-      
+
       - name: "Terraform Plan"
         id: plan
         run: terraform plan -detailed-exitcode >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
@@ -89,7 +79,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
-      
+
       - name: "Cycle nodes"
         if: success()
         id: cycle-nodes
@@ -110,7 +100,7 @@ jobs:
         env:
           AWS_SECRETS_ROLE: ${{ secrets.AWS_GHA_ROLE_MGMT_DEV }}
           AWS_DEFAULT_REGION: eu-west-2
-      
+
       - name: Deactivate AWS Credentials
         if: failure()
         uses: docker://amazon/aws-cli
