adding sre group as viewer of dataworks and utility pipelines
Signed-off-by: levankirvalidze <levankirvalidze@digital.uc.dwp.gov.uk>

--- a/terraform/modules/concourse_web/templates/teams/dataworks/team.yml
+++ b/terraform/modules/concourse_web/templates/teams/dataworks/team.yml
@@ -5,6 +5,8 @@ roles:
   - name: viewer
     github:
       teams: ["dip:devops"]
+    oicd:
+      groups: ["sre"]
   - name: owner
     oidc:
       groups: ["admins"]
