--- a/terraform/modules/concourse_web/templates/teams/utility/team.yml
+++ b/terraform/modules/concourse_web/templates/teams/utility/team.yml
@@ -5,6 +5,8 @@ roles:
   - name: viewer
     github:
       teams: ["dip:devops"]
+    oicd:
+      groups: ["sre"]
   - name: owner
     oidc:
       groups: ["admins"]
