--- a/.github/workflows/tf-merge.yml
+++ b/.github/workflows/tf-merge.yml
@@ -80,7 +80,7 @@ jobs:
       
       - name: Deactivate AWS Credentials
         if: failure()
-        uses: docker://amazon/aws-cli
+        uses: docker://amazon/aws-cli:0.0.9
         with:
           args: iam update-access-key --access-key-id ${{ secrets.ACTIONS_ACCESS_KEY_ID }} --status Inactive --user-name gha-aws-concourse
         env:
@@ -171,7 +171,7 @@ jobs:
       
       - name: Deactivate AWS Credentials
         if: ${{ always() }}
-        uses: docker://amazon/aws-cli
+        uses: docker://amazon/aws-cli:0.0.9
         with:
           args: iam update-access-key --access-key-id ${{ secrets.ACTIONS_ACCESS_KEY_ID }} --status Inactive --user-name gha-aws-concourse
         env:
