--- a/.github/workflows/tf-pull-request.yml
+++ b/.github/workflows/tf-pull-request.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: ${{ secrets.TERRAFORM_14_VERSION }}
+          terraform_version: ${{ secrets.TERRAFORM_VERSION }}
       - uses: actions/setup-python@v2
         with:
           python-version: "3.x"
