--- a/.github/workflows/tf-push.yml
+++ b/.github/workflows/tf-push.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: ${{ secrets.TERRAFORM_14_VERSION }}
+          terraform_version: ${{ secrets.TERRAFORM_VERSION }}
 
       - name: "Terraform Format"
         id: fmt
