--- a/ci/ami-test/meta.yml
+++ b/ci/ami-test/meta.yml
@@ -8,7 +8,7 @@ meta:
           type: docker-image
           source:
             repository: "hashicorp/terraform"
-            tag: ((dataworks.terraform_14_version))
+            tag: ((dataworks.terraform_version))
         params:
           AWS_DEFAULT_REGION: ((dataworks.aws_region))
           GIT_USERNAME: ((dataworks.concourse_github_username))
